--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.clearfix:after{
+    content: "";
+    display: table;
+    clear: both;
+}
 body{
     font-family: 'Times New Roman', Times, serif;
     font-size: 18px;
@@ -7,19 +17,61 @@ h1, h2 {
 }
 h1 {
     font-size: 40px;
+    margin-bottom: 20px;
 }
 h2 {
     font-size: 30px;
+    margin-bottom: 10px;
 }
 .maintext {
     text-align: justify;
     padding: 10px;
     text-indent: 20px;
+    margin-bottom: 20px;
 }
 #author{
     font-size: 22px;
+    float: left;
+    margin-top: 33px;
+    margin-left: 10px;
 }
 .medium{
-    width: 400px;
-    height: 250px;
+    width: auto;
+    height: 150px;
+    margin-bottom: 20px;
+}
+.container {
+    width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
+.blogpost {
+    width: 75%;
+    float: left;
+    padding-right: 30px;
+    position: relative;
+}
+.other-posts{
+    width: 25%;
+    float: left;
+}
+.author-box{
+    border-top: 1px solid grey ;
+    padding-top: 20px;
+}
+.other{
+    margin-bottom: 20px;
+}
+.author-box img {
+    height: 100px;
+    width: 100px;
+    border-radius: 80%;
+    float: left;
+}
+.date {
+    position: absolute;
+    top: 10px;
+    right: 0px;
+    padding-right: 30px;
 }
